--- a/root/code/templates/liblogin.html
+++ b/root/code/templates/liblogin.html
@@ -11,6 +11,18 @@
         <br> <br>
         <h2 style="text-align: center; font-size:xx-large;" >Welcome, Back!</h2> <!-- Greeting heading for users -->
         <h3 style="text-align: center; font-size: large;">Login with your credientials</h3>
+        <div>
+            <br>
+            {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                <div class="alert alert-warning">
+                {% for message in messages %}
+                {{ message }}
+                {% endfor %}
+                </div>
+            {% endif %}
+            {% endwith %}
+        </div>
         <div id="form-body">
             <h1>Librarian Login</h1>
             <form action="" method="post">
@@ -25,7 +37,7 @@
                 <input type="submit" class="btn btn-primary" value="Login"> 
             </form>
             <div style="text-align: center;">
-                Don't have credientials? <a href="{{url_for('library/register')}}">register Library</a>
+                Don't have credientials? <a href="{{url_for('librarian_register')}}">register Library</a>
             </div>
         </div>
     </div>
