--- a/root/code/templates/userdash.html
+++ b/root/code/templates/userdash.html
@@ -15,9 +15,9 @@
         </a>
         <ul class="nav nav-pills">
           <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Books</a></li>
-          <li class="nav-item"><a href="./user/books" class="nav-link">My Books</a></li>
+          <li class="nav-item"><a href="{{url_for('user_books')}}" class="nav-link">My Books</a></li>
           <li class="nav-item"><a href="#" class="nav-link">Stats</a></li>
-          <li class="nav-item"><a href="{{url_for('/user/Logout')}}" class="nav-link">Logout</a></li>
+          <li class="nav-item"><a href="{{url_for('user_logout')}}" class="nav-link">Logout</a></li>
         </ul>
       </header>
       <div class="text-center">
