--- a/root/code/templates/libdash.html
+++ b/root/code/templates/libdash.html
@@ -11,7 +11,7 @@
         <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
           <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
             <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
-            <span class="fs-4">IITM BS Library</span>
+            <span class="fs-4">{{libinfo["Name"]}}</span>
           </a>
           <ul class="nav nav-pills">
             <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Books</a></li>
@@ -46,12 +46,27 @@
           <div style="text-align: left; margin-left: 50px;">
             <h3>Sections</h3>
           </div>
+        </div>
+
         <div>
-            Sections will come here
+          {% if sections %}
+            {% for section in sections %}
+              <div class="section-box">
+                <h4>{{ section.name }}</h4>
+                <p>Date Created: {{ section.date_created }}</p>
+                <p>Description: {{ section.description }}</p>
+                <a href="{{url_for('add_book', section_id=section.id)}}" class="btn btn-primary">Add Book</a>
+              </div>
+            {% endfor %}
+          {% else %}
+            <div class="text-center">
+              <p>No sections found, kindly create by using the below create button.</p>
+            </div>
+          {% endif %}
         </div>
 
         <div class="text-center">
-            <button type="button" class="btn btn-primary">Primary</button>
+          <a href="{{url_for('add_section')}}" class="btn btn-primary">Add Section</a>
         </div>
     </div>
 </body>
