--- a/root/code/templates/libdash.html
+++ b/root/code/templates/libdash.html
@@ -18,7 +18,7 @@
             <li class="nav-item"><a href="{{url_for('bookrequests')}}" class="nav-link">Book Requests</a></li>
             <li class="nav-item"><a href="#" class="nav-link">Stats</a></li>
             <li class="nav-item"><a href="{{url_for('lib_logout')}}" class="nav-link">Logout</a></li>
-          </ul>
+          </ul>                 
         </header>
   
         <div class="text-center mt-5 d-flex justify-content-center align-items-center me-md-auto">
@@ -56,7 +56,7 @@
                 <h4>{{ section.name }}</h4>
                 <p>Date Created: {{ section.date_created }}</p>
                 <p>Description: {{ section.description }}</p>
-                <a href="{{url_for('library/showbooks', section_id=section.id)}}" class="btn btn-primary">Show all Books</a>
+                <a href="{{url_for('show_books', section_id=section.id)}}" class="btn btn-primary">Show all Books</a>
                 <a href="{{url_for('add_book', section_id=section.id)}}" class="btn btn-primary">Add Book</a>
               </div>
             {% endfor %}
