--- a/root/code/templates/bookrequests.html
+++ b/root/code/templates/bookrequests.html
@@ -11,10 +11,11 @@
         <!-- Loop through the list of books and generate list items -->
         {% for book in book_requests %}
             <li>
-                {{ book }}
-                <a href="{{ url_for('view_details', r_id=book.id) }}" class="btn-view">View</a>
-                <a href="{{ url_for('grantboooks', r_id=book.id) }}" class="btn-grant">Grant</a>
-                <a href="{{ url_for('rejectbooks', r_id=book.id) }}" class="btn-reject">Reject</a>
+                <h2>{{ book["book_title"] }}</h2>
+                <p>{{book["user_id"]}}</p>
+                <a href="{{ url_for('view_details', r_id=book['id']) }}" class="btn-view">View</a>
+                <a href="{{ url_for('grantboooks', r_id=book['id']) }}" class="btn-grant">Grant</a>
+                <a href="{{ url_for('rejectbooks', r_id=book['id']) }}" class="btn-reject">Reject</a>
             </li>
         {% endfor %}
         {% if book_requests|length == 0 %}
