--- a/root/code/templates/bookrequests.html
+++ b/root/code/templates/bookrequests.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -13,6 +12,7 @@
             <li>
                 <h2>{{ book["book_title"] }}</h2>
                 <p>{{book["user_id"]}}</p>
+                <p>{{book["id"]}}</p>
                 <a href="{{ url_for('view_details', r_id=book['id']) }}" class="btn-view">View</a>
                 <a href="{{ url_for('grantboooks', r_id=book['id']) }}" class="btn-grant">Grant</a>
                 <a href="{{ url_for('rejectbooks', r_id=book['id']) }}" class="btn-reject">Reject</a>
