--- a/root/code/templates/libdash.html
+++ b/root/code/templates/libdash.html
@@ -21,6 +21,20 @@
           </ul>                 
         </header>
   
+        <div>
+          {% with messages = get_flashed_messages() %}
+          {% if messages %}
+              <div class="alert alert-warning">
+              {% for message in messages %}
+              {{ message }}
+              {% endfor %}
+              </div>
+          {% endif %}
+          {% endwith %}
+        </div>
+        <br>
+
+
         <div class="text-center mt-5 d-flex justify-content-center align-items-center me-md-auto">
           <form class="w-25 me-2" role="search">
               <div class="d-flex">
