--- a/root/code/templates/userbooks.html
+++ b/root/code/templates/userbooks.html
@@ -23,7 +23,6 @@
       <div class="text-center">
         <h1>Your Current Books </h1>
       </div>
-
       <div class="text-center mt-5 d-flex justify-content-center align-items-center me-md-auto">
         <form class="w-25 me-2" role="search">
             <div class="d-flex">
@@ -46,7 +45,8 @@
             </div>
         </form>
       </div>
-      
+
+
 
       <div>
         {% with messages = get_flashed_messages() %}
@@ -169,5 +169,8 @@
                 </tbody>
             </table>
         </div>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
