--- a/root/code/templates/addbook.html
+++ b/root/code/templates/addbook.html
@@ -7,8 +7,11 @@
     
     <label for="bookImage">Book Image:</label>
     <input type="url" id="bookImage" name="bookImage">
+
+    <label for="content">Book Link:</label>
+    <textarea id="content" name="link" required></textarea>
     
-    <label for="content">Book Content link:</label>
+    <label for="content">Book Content:</label>
     <textarea id="content" name="content" required></textarea>
     
     <input type="submit" value="Add Section">
