work on database

--- a/root/code/templates/libdash.html
+++ b/root/code/templates/libdash.html
@@ -16,6 +16,7 @@
           <ul class="nav nav-pills">
             <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Books</a></li>
             <li class="nav-item"><a href="{{url_for('bookrequests')}}" class="nav-link">Book Requests</a></li>
+            <li class="nav-item"><a href="{{url_for('current_books')}}" class="nav-link">Current Books</a></li>
             <li class="nav-item"><a href="#" class="nav-link">Stats</a></li>
             <li class="nav-item"><a href="{{url_for('lib_logout')}}" class="nav-link">Logout</a></li>
           </ul>                 
