work on database

--- a/root/code/templates/forgot_password.html
+++ b/root/code/templates/forgot_password.html
@@ -8,6 +8,22 @@
 </head>
 <body>
     <h1>Forgot Password</h1>
+    <div class="container">
+        <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+          <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+            <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
+            <span class="fs-4">Simple header</span>
+          </a>
+    
+          <ul class="nav nav-pills">
+            <li class="nav-item"><a href="{{url_for('home')}}" class="nav-link active" aria-current="page">Home</a></li>
+            <li class="nav-item"><a href="{{url_for('librarian_login')}}" class="nav-link">Library Login</a></li>
+            <li class="nav-item"><a href="{{url_for('user_login')}}" class="nav-link">Student Login</a></li>
+            <li class="nav-item"><a href="{{url_for('about')}}" class="nav-link">About</a></li>
+          </ul>
+        </header>
+      </div>
+      
     <form action="/reset_password" method="post">
         <label for="email">Email:</label><br>
         <input type="email" id="email" name="email" required><br>
