add important buttons

--- a/root/code/templates/bookrequests.html
+++ b/root/code/templates/bookrequests.html
@@ -56,6 +56,8 @@
             <li>There are no book requests.</li>
         {% endif %}
     </ul>
+    <a href="{{ url_for('librarian_dashboard') }}">Back to Librarian Dashboard</a>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
