--- a/root/code/templates/makerequest.html
+++ b/root/code/templates/makerequest.html
@@ -39,6 +39,7 @@
 			<input type="hidden" name="book_id" value="{{ book.id }}">
 			<button type="submit" class="btn btn-primary">Submit</button>
 		</form>
+		<a href="{{ url_for('user_dashboard') }}">Back to User Dashboard</a>
 	</div>
 
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
