--- a/root/code/templates/libcurrentbooks.html
+++ b/root/code/templates/libcurrentbooks.html
@@ -83,6 +83,9 @@
 		{% endif %}
 	</div>
 
+	<a href="{{ url_for('librarian_dashboard') }}">Back to Librarian Dashboard</a>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
