--- a/root/code/templates/libdash.html
+++ b/root/code/templates/libdash.html
@@ -64,6 +64,7 @@
                 <p>Description: {{ section.description }}</p>
                 <a href="{{url_for('show_books', section_id=section.id)}}" class="btn btn-primary">Show all Books</a>
                 <a href="{{url_for('add_book', section_id=section.id)}}" class="btn btn-primary">Add Book</a>
+                <a href="{{url_for('delete_section', section_id=section.id)}}" class="btn btn-primary">Delete Section</a>
               </div>
             {% endfor %}
           {% else %}
