--- a/root/code/templates/userbooks.html
+++ b/root/code/templates/userbooks.html
@@ -17,7 +17,7 @@
             <li class="nav-item"><a href="{{url_for('user_dashboard')}}" class="nav-link">Books</a></li>
           <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">My Books</a></li>
           <li class="nav-item"><a href="#" class="nav-link">Stats</a></li>
-          <li class="nav-item"><a href="/login" class="nav-link">Logout</a></li>
+          <li class="nav-item"><a href="{{url_for('user_logout')}}" class="nav-link">Logout</a></li>
         </ul>
       </header>
       <div class="text-center">
