--- a/root/code/templates/about.html
+++ b/root/code/templates/about.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>About Us</title>
-</head>
-<body>
-	<h1>About Us</h1>
-	<p>Welcome to our website! We are a team of passionate individuals dedicated to providing high-quality products and services.</p>
-	<p>Feel free to explore our website to learn more about what we do and how we can help you.</p>
-</body>
+<html lang="en">
+  <head>
+      <meta charset="UTF-8">
+      <title>About-LMS</title>
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+      <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+  </head>
+  <body>
+	{% include 'header-nonlogin.html' %}
+    <div class="mainbody-nonlogin"> <!-- this is for main body for non login -->
+      <h1>About</h1>
+      <br>
+      <p>This is Library management website which provides e books for students at their conveniance</p>
+	<p style="color: blue;"><a href="mailto:23f1002838@ds.study.iitm.ac.in" class="nav-link">Contact</a></p>
+	  <p>Thank you, happy reading !</p>
+    </div>
+	{% include 'footer.html' %}
+  </body>
 </html>
