--- a/root/code/templates/index.html
+++ b/root/code/templates/index.html
@@ -1,37 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home-LMS</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-</head>
-<body style="margin-left: 10px;">
-
-    <div class="container">
-        <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-          <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-            <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
-            <span class="fs-4">Simple header</span>
-          </a>
-    
-          <ul class="nav nav-pills">
-            <li class="nav-item"><a href="{{url_for('home')}}" class="nav-link active" aria-current="page">Home</a></li>
-            <li class="nav-item"><a href="{{url_for('librarian_login')}}" class="nav-link">Library Login</a></li>
-            <li class="nav-item"><a href="{{url_for('user_login')}}" class="nav-link">Student Login</a></li>
-            <li class="nav-item"><a href="{{url_for('about')}}" class="nav-link">About</a></li>
-          </ul>
-        </header>
-      </div>
-
-    <h1>Welcome to e-Library</h1>
-    <br>
-    <div class="buttons"></div>
-        <a style="margin-left: 10px; margin-bottom: 5px;" href="{{url_for('user_login')}}" class="btn btn-primary">User Login</a>
-        <a style="margin-left: 10px; margin-bottom: 5px;" href="{{url_for('user_register')}}" class="btn btn-primary">User Registration</a>
-        <a style="margin-left: 10px; margin-bottom: 5px;" href="{{url_for('librarian_login')}}" class="btn btn-primary">Library Login</a>
-        <a style="margin-left: 10px; margin-bottom: 5px;" href="{{url_for('librarian_register')}}" class="btn btn-primary">Library Registration</a>
+  <head>
+      <meta charset="UTF-8">
+      <title>Home-LMS</title>
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+      <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+  </head>
+  <body>
+    {% include 'header-nonlogin.html' %}
+    <div class="mainbody-nonlogin"> <!-- this is for main body for non login -->
+      <h1>Welcome to E-Library Management System</h1>
+      <br>
+      <p>Welcome to the E-Library Management System! Our software provides a convenient way to manage
+         and organize your library resources digitally. With our system, you can easily keep track of 
+         books, manage user accounts, and streamline library operations.</p>
+      <p>To navigate through our website, please use the appropriate buttons on the header:</p>
+      <ul>
+        <li>Click on "Home" to go to the home page.</li>
+        <li>Click on "Library Login" to access the librarian login page.</li>
+        <li>Click on "Student Login" to access the student login page.</li>
+        <li>Click on "About" to learn more about our library management system.</li>
+        <li>Click on "Contact" to reach out</li>
+      </ul>
+      <p>Thank you, happy reading !</p>
     </div>
-</body>
+    {% include 'footer.html' %}
+  </body>
 </html>
