--- a/root/code/templates/registerlib.html
+++ b/root/code/templates/registerlib.html
@@ -2,66 +2,51 @@
 <html lang="en">
 <head>
     <title>Librarian Register form</title>
-    <link rel="stylesheet" href="../static/css/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
-    <div id="main">
-        <div id="canvas">
-            <br>
-            <div class="container">
-                <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-                  <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-                    <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
-                    <span class="fs-4">Simple header</span>
-                  </a>
-            
-                  <ul class="nav nav-pills">
-                    <li class="nav-item"><a href="{{url_for('home')}}" class="nav-link active" aria-current="page">Home</a></li>
-                    <li class="nav-item"><a href="{{url_for('librarian_login')}}" class="nav-link">Library Login</a></li>
-                    <li class="nav-item"><a href="{{url_for('user_login')}}" class="nav-link">Student Login</a></li>
-                    <li class="nav-item"><a href="{{url_for('about')}}" class="nav-link">About</a></li>
-                  </ul>
-                </header>
-              </div>
-            <div id="form-body">
-                <h1>Register Your Library</h1>
-                <div>
-                    <br>
-                    {% with messages = get_flashed_messages() %}
-                    {% if messages %}
-                        <div class="alert alert-warning">
-                        {% for message in messages %}
-                        {{ message }}
-                        {% endfor %}
-                        </div>
-                    {% endif %}
-                    {% endwith %}
-                </div>
-                <form action="" method="post">
-                    <div class="mb-3">
-                        <label for="username" class="form-label">Username</label>
-                        <input type="text" class="form-control" id="username" placeholder="user123" name="u_name" required>
+    {% include 'header-nonlogin.html' %}
+    <div class="mainbody-nonlogin">
+        <div id="form-body">
+            <h1>Register Your Library</h1>
+            <div>
+                <br>
+                {% with messages = get_flashed_messages() %}
+                {% if messages %}
+                    <div class="alert alert-warning">
+                    {% for message in messages %}
+                    {{ message }}
+                    {% endfor %}
                     </div>
-                    <div class="mb-3">
-                        <label for="libraryname" class="form-label">Library Name</label>
-                        <input type="text" class="form-control" id="libraryname" placeholder="ABC Library" name="libraryname" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="pwd" class="form-label">Password</label>
-                        <input type="password" class="form-control" id="pwd" name="pwd" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="pwd" class="form-label">Confirm Password</label>
-                        <input type="password" class="form-control" id="pwd" name="c_pwd" required>
-                    </div>
-                  <input type="submit" class="btn btn-primary" value="Register"> 
-                 </form>
-                 <div style="text-align: center;">
-                  Already Registered Librarian <a href="{{url_for('librarian_login')}}">login.</a>
-                </div>
+                {% endif %}
+                {% endwith %}
             </div>
+            <form action="" method="post">
+                <div class="mb-3">
+                    <label for="username" class="form-label">Username</label>
+                    <input type="text" class="form-control" id="username" placeholder="user123" name="u_name" required>
+                </div>
+                <div class="mb-3">
+                    <label for="libraryname" class="form-label">Library Name</label>
+                    <input type="text" class="form-control" id="libraryname" placeholder="ABC Library" name="libraryname" required>
+                </div>
+                <div class="mb-3">
+                    <label for="pwd" class="form-label">Password</label>
+                    <input type="password" class="form-control" id="pwd" name="pwd" required>
+                </div>
+                <div class="mb-3">
+                    <label for="pwd" class="form-label">Confirm Password</label>
+                    <input type="password" class="form-control" id="pwd" name="c_pwd" required>
+                </div>
+                <input type="submit" class="btn btn-primary" value="Register"> 
+            </form>
+                <div style="text-align: center;">
+                Already Registered Librarian <a href="{{url_for('librarian_login')}}">login.</a>
+                </div>
         </div>
     </div>
+    {% include 'footer.html' %}
 </body>
 </html>
