--- a/root/code/templates/forgot_password.html
+++ b/root/code/templates/forgot_password.html
@@ -29,5 +29,6 @@
         <input type="email" id="email" name="email" required><br>
         <input type="submit" value="Submit">
     </form>
+    {% include 'footer.html' %}
 </body>
 </html>
