--- a/root/code/templates/addbook.html
+++ b/root/code/templates/addbook.html
@@ -1,20 +1,35 @@
-<form action="" method="POST">
-    <label for="bookTitle">Book Name:</label>
-    <input type="text" id="bookTitle" name="bookTitle" required>
-    <input type="hidden" name="section_id" value="{{ section_id }}">
-    <label for="author">Author </label>
-    <input type="text" id="author" name="author" required>
-    
-    <label for="bookImage">Book Image:</label>
-    <input type="url" id="bookImage" name="bookImage">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Librarian Dashboard</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+</head>
+<body>
+  {% include 'header-lib.html' %}
+  <div class="mainbody-nonlogin">
+    <form action="" method="POST">
+        <label for="bookTitle">Book Name:</label>
+        <input type="text" id="bookTitle" name="bookTitle" required>
+        <input type="hidden" name="section_id" value="{{ section_id }}">
+        <label for="author">Author </label>
+        <input type="text" id="author" name="author" required>
+        
+        <label for="bookImage">Book Image:</label>
+        <input type="url" id="bookImage" name="bookImage">
 
-    <label for="content">Book Link:</label>
-    <textarea id="content" name="link" required></textarea>
-    
-    <label for="content">Book Content:</label>
-    <textarea id="content" name="content" required></textarea>
-    
-    <input type="submit" value="Add Section">
-    <br>
-</form>
-<a href="{{url_for('librarian_dashboard')}}">Back to Dashboard</a>
+        <label for="content">Book Link:</label>
+        <textarea id="content" name="link" required></textarea>
+        
+        <label for="content">Book Content:</label>
+        <textarea id="content" name="content" required></textarea>
+        
+        <input type="submit" value="Add Section">
+        <br>
+    </form>
+    <a href="{{url_for('librarian_dashboard')}}">Back to Dashboard</a>
+  </div>
+  {% include 'footer.html' %}
+</body>
+</html>
