--- a/root/code/templates/addsection.html
+++ b/root/code/templates/addsection.html
@@ -1,4 +1,15 @@
-<form action="" method="POST">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Librarian Dashboard</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+</head>
+<body>
+  {% include 'header-lib.html' %}
+  <div class="mainbody-nonlogin">
+    <form action="" method="POST">
     <label for="sectionName">Section Name:</label>
     <input type="text" id="sectionName" name="sectionName" required>
     
@@ -12,3 +23,7 @@
     <br>
     <a href="{{url_for('librarian_dashboard')}}">Back to Dashboard</a>
 </form>
+    </div>
+{% include 'footer.html' %}
+</body>
+</html>
