--- a/root/code/templates/bookrequests.html
+++ b/root/code/templates/bookrequests.html
@@ -2,11 +2,13 @@
 <html>
 <head>
     <title>Book Requests</title>
-    <link rel="stylesheet" href="static/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
+  {% include 'header-lib.html' %}
+  <div class="mainbody-nonlogin">
     <div class="text-center mt-5 d-flex justify-content-center align-items-center me-md-auto">
         <form class="w-25 me-2" role="search" action="" method="post">
           <div class="d-flex">
@@ -25,7 +27,8 @@
           </div>
         </form>
       </div>
-    <div>
+
+      <div>
         {% with messages = get_flashed_messages() %}
         {% if messages %}
             <div class="alert alert-warning">
@@ -37,8 +40,6 @@
         {% endwith %}
       </div>
       <br>
-
-
     <h1>Books Requests</h1>
     <ul>
         <!-- Loop through the list of books and generate list items -->
@@ -58,7 +59,7 @@
     </ul>
     <a href="{{ url_for('librarian_dashboard') }}">Back to Librarian Dashboard</a>
 
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+  </div>
+    {% include 'footer.html' %}
+  </body>
 </html>
