--- a/root/code/templates/libcurrentbooks.html
+++ b/root/code/templates/libcurrentbooks.html
@@ -1,21 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Current Books</title>
-    <link rel="stylesheet" href="static/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <title>Librarian Dashboard</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
-	<header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-		<ul class="nav nav-pills">
-		  <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Books</a></li>
-		  <li class="nav-item"><a href="{{url_for('bookrequests')}}" class="nav-link">Book Requests</a></li>
-		  <li class="nav-item"><a href="{{url_for('current_books')}}" class="nav-link">Current Books</a></li>
-		  <li class="nav-item"><a href="#" class="nav-link">Stats</a></li>
-		  <li class="nav-item"><a href="{{url_for('lib_logout')}}" class="nav-link">Logout</a></li>
-		</ul>                 
-	</header>
+  {% include 'header-lib.html' %}
+  <div class="mainbody-nonlogin">
 	<div>
 		{% with messages = get_flashed_messages() %}
 		{% if messages %}
@@ -81,11 +74,11 @@
 		{% else %}
 			<p>There are no current books.</p>
 		{% endif %}
-	</div>
+
 
 	<a href="{{ url_for('librarian_dashboard') }}">Back to Librarian Dashboard</a>
+</div>
 
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+	{% include 'footer.html' %}
 </body>
 </html>
