--- a/root/code/templates/libdash.html
+++ b/root/code/templates/libdash.html
@@ -2,81 +2,64 @@
 <html lang="en">
 <head>
     <title>Librarian Dashboard</title>
-    <link rel="stylesheet" href="static/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
-    <div id="main">
-        <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-          <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-            <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
-            <span class="fs-4">{{libinfo["Name"]}}</span>
-          </a>
-          <ul class="nav nav-pills">
-            <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Books</a></li>
-            <li class="nav-item"><a href="{{url_for('bookrequests')}}" class="nav-link">Book Requests</a></li>
-            <li class="nav-item"><a href="{{url_for('current_books')}}" class="nav-link">Current Books</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Stats</a></li>
-            <li class="nav-item"><a href="{{url_for('lib_logout')}}" class="nav-link">Logout</a></li>
-          </ul>                 
-        </header>
-
-
-        <div>
-          {% with messages = get_flashed_messages() %}
-          {% if messages %}
-              <div class="alert alert-warning">
-              {% for message in messages %}
-              {{ message }}
-              {% endfor %}
-              </div>
-          {% endif %}
-          {% endwith %}
-        </div>
-        <br>
-
-
-        <div class="text-center mt-5 d-flex justify-content-center align-items-center me-md-auto">
-          <form class="w-25 me-2" role="search" action="" method="post">
-              <div class="d-flex">
-                <input type="search" class="form-control" placeholder="Search Sections..." aria-label="Search" name="search_keyword">
-                <button type="submit" class="btn btn-secondary " style="margin-left: 15px;">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-                    <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"></path>
-                  </svg>
-                </button>
-              </div>
-          </form>
-        </div>
-        <div style="margin: 50px;">
-          <div style="text-align: left; margin-left: 50px;">
-            <h3>Sections</h3>
+  {% include 'header-lib.html' %}
+  <div class="mainbody-nonlogin">
+    <div>
+      {% with messages = get_flashed_messages() %}
+      {% if messages %}
+          <div class="alert alert-warning">
+          {% for message in messages %}
+          {{ message }}
+          {% endfor %}
           </div>
-        </div>
-
-        <div>
-          {% if sections %}
-            {% for section in sections %}
-              <div class="section-box">
-                <h4>{{ section.name }}</h4>
-                <p>Date Created: {{ section.date_created }}</p>
-                <p>Description: {{ section.description }}</p>
-                <a href="{{url_for('show_books', section_id=section.id)}}" class="btn btn-primary">Show all Books</a>
-                <a href="{{url_for('add_book', section_id=section.id)}}" class="btn btn-primary">Add Book</a>
-                <a href="{{url_for('delete_section', section_id=section.id)}}" class="btn btn-primary">Delete Section</a>
-              </div>
-            {% endfor %}
-          {% else %}
-            <div class="text-center">
-              <p>No sections found, kindly create by using the below create button.</p>
-            </div>
-          {% endif %}
-        </div>
-
-        <div class="text-center">
-          <a href="{{url_for('add_section')}}" class="btn btn-primary">Add Section</a>
-        </div>
+      {% endif %}
+      {% endwith %}
     </div>
+    <br>
+    <div class="text-center mt-5 d-flex justify-content-center align-items-center me-md-auto">
+      <form class="w-25 me-2" role="search" action="" method="post">
+          <div class="d-flex">
+            <input type="search" class="form-control" placeholder="Search Sections..." aria-label="Search" name="search_keyword">
+            <button type="submit" class="btn btn-secondary " style="margin-left: 15px;">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"></path>
+              </svg>
+            </button>
+          </div>
+      </form>
+    </div>
+    <div style="margin: 50px;">
+      <div style="text-align: left; margin-left: 50px;">
+        <h3>Sections</h3>
+      </div>
+    </div>
+    <div>
+      {% if sections %}
+        {% for section in sections %}
+          <div class="section-box">
+            <h4>{{ section.name }}</h4>
+            <p>Date Created: {{ section.date_created }}</p>
+            <p>Description: {{ section.description }}</p>
+            <a href="{{url_for('show_books', section_id=section.id)}}" class="btn btn-primary">Show all Books</a>
+            <a href="{{url_for('add_book', section_id=section.id)}}" class="btn btn-primary">Add Book</a>
+            <a href="{{url_for('delete_section', section_id=section.id)}}" class="btn btn-primary">Delete Section</a>
+          </div>
+        {% endfor %}
+      {% else %}
+        <div class="text-center">
+          <p>No sections found, kindly create by using the below create button.</p>
+        </div>
+      {% endif %}
+    </div>
+    <div class="text-center">
+      <a href="{{url_for('add_section')}}" class="btn btn-primary">Add Section</a>
+    </div>
+  </div>
+    {% include 'footer.html' %}
 </body>
 </html>
