--- a/root/code/templates/makerequest.html
+++ b/root/code/templates/makerequest.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Make Request</title>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <title>Make Request</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
-	<div class="container">
+  {% include 'header-user.html' %}
+  <div class="mainbody-nonlogin">
 		<h1>Book Details</h1>
 		<table class="table">
 			<thead>
@@ -42,6 +43,5 @@
 		<a href="{{ url_for('user_dashboard') }}">Back to User Dashboard</a>
 	</div>
 
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
+	{% include 'footer.html' %}</body>
 </html>
