--- a/root/code/templates/payment.html
+++ b/root/code/templates/payment.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Book Payment</title>
+    <title>Book Payment</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
+  {% include 'header-user.html' %}
+  <div class="mainbody-nonlogin">
 	{% if flash_message %}
 		<div class="flash-message">
 			{{ flash_message }}
@@ -25,5 +30,8 @@
 		<p>Are you sure to make payment for this book, after making the payment you will get pdf of this book.</p>
 		<br>
 		<input type="submit" value="Pay">
+	</form>
+	</div>
+	{% include 'footer.html' %}
 </body>
 </html>
