--- a/root/code/templates/showbooks.html
+++ b/root/code/templates/showbooks.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Show Books</title>
-        <link rel="stylesheet" href="static/style.css">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    </head>
-<body>  
-
+<html lang="en">
+<head>
+    <title>Show Books</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+</head>
+<body>
+  {% include 'header-lib.html' %}
+  <div class="mainbody-nonlogin">
     <div class="text-center mt-5 d-flex justify-content-center align-items-center me-md-auto">
         <form class="w-25 me-2" role="search" action="{{ url_for('show_books') }}" method="post">
             <div class="d-flex">
@@ -40,6 +41,8 @@
     {% endif %}
 
     <a href="{{ url_for('librarian_dashboard') }}">Back to Librarian Dashboard</a>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+    </div>
+    {% include 'footer.html' %}
+
 </body>
 </html>
