--- a/root/code/templates/userbooks.html
+++ b/root/code/templates/userbooks.html
@@ -1,25 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>User Dashboard</title>
-    <link rel="stylesheet" href="static/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <title>User Books</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
-    <div id="main">
-      <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-        <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-          <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
-          <span class="fs-4">{{ user["username"] }}</span>
-        </a>
-        <ul class="nav nav-pills">
-            <li class="nav-item"><a href="{{url_for('user_dashboard')}}" class="nav-link">Books</a></li>
-          <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">My Books</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">Stats</a></li>
-          <li class="nav-item"><a href="{{url_for('user_logout')}}" class="nav-link">Logout</a></li>
-        </ul>
-      </header>
+  {% include 'header-user.html' %}
+  <div class="mainbody-nonlogin">
       <div class="text-center">
         <h1>Your Current Books </h1>
       </div>
@@ -34,12 +23,11 @@
         {% endif %}
         {% endwith %}
       </div>
-      <br>
 
-      <div style="text-align: left; margin-left: 50px;">
+      <div class = "tableheaders">
         <h3>List of current books</h3>
-    </div>
-      <div class="col-xs-8 col-xs-offset-2 well">
+      </div>
+      <div class="col-xs-8 col-xs-offset-2">
         <table class="table table-scroll table-striped">
             <thead>
                 <tr>
@@ -61,9 +49,9 @@
                             <td>{{ book["author"] }}</td>
                             <td>{{ book["days remaining"] }}</td>
                             <td>
-                                <a href="{{ url_for('return_book', book_id=book['id'] , user_id=user['userid']) }}">Return</a>
+                                <a href="{{ url_for('return_book', book_id=book['id'] , user_id=userinfo['userid']) }}">Return</a>
                                 <a href="{{ url_for('view_book', book_id=book['id']) }}">View</a>
-                                <a href="{{ url_for('download_book', book_id=book['id'], user_id=user['userid']) }}">Download</a>
+                                <a href="{{ url_for('download_book', book_id=book['id'], user_id=userinfo['userid']) }}">Download</a>
                             </td>
                         </tr>
                     {% endfor %}
@@ -75,13 +63,12 @@
             </tbody>
         </table>
     </div>
-      
-    <div style="margin: 50px;"></div>
-        <div style="text-align: left; margin-left: 50px;">
-            <h3>List of completed books</h3>
-        </div>
+      <br>
+    <div class = "tableheaders">
+        <h3>List of completed books</h3>
+    </div>
 
-        <div class="col-xs-8 col-xs-offset-2 well"></div>
+        <div class="col-xs-8 col-xs-offset-2"></div>
             <table class="table table-scroll table-striped">
                 <thead>
                     <tr>
@@ -110,14 +97,13 @@
                     {% endif %}
                 </tbody>
             </table>
-        </div>
+       
 
-
-        <div style="margin: 50px;"></div>
-        <div style="text-align: left; margin-left: 50px;">
-            <h3>List of requested books</h3>
+            <br>
+        <div class = "tableheaders">
+            <h3>List of Requested books</h3>
         </div>
-        <div class="col-xs-8 col-xs-offset-2 well"></div>
+        <div class="col-xs-8 col-xs-offset-2 "></div>
             <table class="table table-scroll table-striped">
                 <thead>
                     <tr>
@@ -136,7 +122,7 @@
                                 <td>{{ book["title"] }}</td>
                                 <td>{{ book["section"] }}</td>
                                 <td>{{ book["author"] }}</td>
-                                <td><a href="{{ url_for('cancel_book', book_id=book['id'],  user_id=user['userid']) }}">Cancel</a></td>
+                                <td><a href="{{ url_for('cancel_book', book_id=book['id'],  user_id=userinfo['userid']) }}">Cancel</a></td>
                             </tr>
                         {% endfor %}
                     {% else %}
@@ -148,7 +134,6 @@
             </table>
         </div>
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-
+        {% include 'footer.html' %}
 </body>
 </html>
