--- a/root/code/templates/userdash.html
+++ b/root/code/templates/userdash.html
@@ -2,24 +2,13 @@
 <html lang="en">
 <head>
     <title>User Dashboard</title>
-    <link rel="stylesheet" href="static/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
-    <div id="main">
-      <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-        <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-          <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
-          <span class="fs-4">{{ user["firstname"] }}</span>
-        </a>
-        <ul class="nav nav-pills">
-          <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Books</a></li>
-          <li class="nav-item"><a href="{{url_for('user_books')}}" class="nav-link">My Books</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">Stats</a></li>
-          <li class="nav-item"><a href="{{url_for('user_logout')}}" class="nav-link">Logout</a></li>
-        </ul>
-      </header>
+  {% include 'header-user.html' %}
+  <div class="mainbody-nonlogin">
       <div>
         {% with messages = get_flashed_messages() %}
         {% if messages %}
@@ -56,7 +45,7 @@
       </div>
 
       <div style="margin: 50px;"></div> <!-- list of available books -->
-      <div style="text-align: left; margin-left: 50px;">
+      <div class = "tableheaders">
           <h3>List of Available books</h3>
       </div>
       <div class="col-xs-8 col-xs-offset-2 well"></div>
@@ -89,15 +78,6 @@
               </tbody>
           </table>
       </div>
-
-
-
-
-    </div>
-
-
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+    {% include 'footer.html' %}
+  </body>
 </html>
