--- a/root/code/templates/userlogin.html
+++ b/root/code/templates/userlogin.html
@@ -1,30 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>User Login form</title>
-    <link rel="stylesheet" href="../static/css/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <title>User Login</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
-    <div id="main">
-        <br> 
-        <div class="container">
-            <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-              <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-                <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
-                <span class="fs-4">Simple header</span>
-              </a>
-        
-              <ul class="nav nav-pills">
-                <li class="nav-item"><a href="{{url_for('home')}}" class="nav-link active" aria-current="page">Home</a></li>
-                <li class="nav-item"><a href="{{url_for('librarian_login')}}" class="nav-link">Library Login</a></li>
-                <li class="nav-item"><a href="{{url_for('user_login')}}" class="nav-link">Student Login</a></li>
-                <li class="nav-item"><a href="{{url_for('about')}}" class="nav-link">About</a></li>
-              </ul>
-            </header>
-          </div>
-        <br>
+    {% include 'header-nonlogin.html' %}
+    <div class="mainbody-nonlogin">
         <h2 style="text-align: center; font-size:xx-large;" >Welcome, Back!</h2> <!-- Greeting heading for users -->
         <h3 style="text-align: center; font-size: large;">Login with your credientials</h3>
         <br>
@@ -61,6 +45,7 @@
             </div>
         </div>
     </div>
+    {% include 'footer.html' %}
 </body>
 </html>
 
