--- a/root/code/templates/viewbook.html
+++ b/root/code/templates/viewbook.html
@@ -10,5 +10,6 @@
 <embed src="{{pdfLink}}#toolbar=0" type="application/pdf" width="50%" height="300px" download="" />
 <iframe src="{{pdfLink}}#toolbar=0" width="80%" height="500px" ></iframe>
 <p>{{pdfLink}}</p>
+{% include 'footer.html' %}
 </body>
 </html>
