--- a/root/code/templates/viewdetails.html
+++ b/root/code/templates/viewdetails.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>View Details</title>
+    <title>Request Details</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
+  {% include 'header-lib.html' %}
+  <div class="mainbody-nonlogin">
     <h1>View Details</h1>
     <p>Request Info: {{ request_info }}</p>
+  </div>
+  {% include 'footer.html' %}
 </body>
 </html>
