--- a/root/code/templates/makerequest.html
+++ b/root/code/templates/makerequest.html
@@ -34,8 +34,7 @@
 		<form action="" method="post">
 			<div class="form-group">
 				<label for="daysRequested">Number of Days Requested:</label>
-				<input type="number" class="form-control" id="daysRequested" name="daysRequested" required>
-			</div>
+				<input type="number" class="form-control" id="daysRequested" name="daysRequested" required min="1" max="15">
 			<input type="hidden" name="user_id" value="{{ book.user_id }}">
 			<input type="hidden" name="book_id" value="{{ book.id }}">
 			<button type="submit" class="btn btn-primary">Submit</button>
