--- a/root/code/templates/viewbook.html
+++ b/root/code/templates/viewbook.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>View PDF</title>
+    <title>Read Book</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
-
-<embed src="{{pdfLink}}#toolbar=0" type="application/pdf" width="50%" height="300px" download="" />
-<iframe src="{{pdfLink}}#toolbar=0" width="80%" height="500px" ></iframe>
-<p>{{pdfLink}}</p>
-{% include 'footer.html' %}
+    <iframe src="{{pdfLink}}#toolbar=0" width="100%" height="680px" ></iframe>
+    {% include 'footer.html' %}
 </body>
 </html>
